--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ sqlalchemy==2.0.31
 mysql-connector-python==8.4.0
 pydantic==2.8.2
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==3.2.0
 python-multipart==0.0.9
 pydantic-settings==2.3.4
-bcrypt
