feat: Implement Python backend for core logic, update frontend, PWA assets, and deployment.

--- a/python/manifest.json
+++ b/python/manifest.json
@@ -3,9 +3,14 @@
   "name": "Dog-School Connect - PfotenCard",
   "icons": [
     {
-      "src": "https://www.gstatic.com/images/branding/product/1x/google_gemini_32dp.png",
+      "src": "/logo.png",
       "type": "image/png",
-      "sizes": "32x32"
+      "sizes": "192x192"
+    },
+    {
+      "src": "/logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
