feat: migrate backend from Appwrite to a new Python FastAPI implementation with PostgreSQL.

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,12 @@
 {
-    "builds": [
+    "rewrites": [
         {
-            "src": "backend/app/main.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/app/main.py"
+            "source": "/api/(.*)",
+            "destination": "/backend/app/main.py"
         },
         {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
