--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,5 +8,10 @@
             "source": "/(.*)",
             "destination": "/app/main.py"
         }
-    ]
+    ],
+    "functions": {
+        "app/main.py": {
+            "runtime": "python3.9"
+        }
+    }
 }
