--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     ],
     "functions": {
         "backend/app/main.py": {
-            "runtime": "@vercel/python"
+            "runtime": "python3.9"
         }
     }
 }
