--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,11 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/backend/app/main.py"
+            "destination": "/api/index.py"
         },
         {
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ],
-    "functions": {
-        "backend/app/main.py": {
-            "runtime": "python3.12"
-        }
-    }
+    ]
 }
